--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 div#banner{
-	background-image: url("dentist1-2.jpg");
+	background-image: url("../images/dentist1-2.jpg");
 	background-size: cover;
 	background-position:center;
 	text-align:right; 
